--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requests = "^2.32.3"
 pandas = "^2.2.3"
 fastapi = "^0.115.6"
 uvicorn = { extras = ["standard"], version = "^0.34.0" }
+librosa = "^0.11.0"
 
 [[tool.poetry.source]]
 name = "bfsu"
